sampler/chain/projects/MPAndroidChart/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/data/PieDataSet.java:33: error: [NullAway] (INDEX= 111) (Covered) assigning @Nullable expression to @NonNull field
    private Integer mHighlightColor = null;
                    ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/data/ChartData.java:583: error: [NullAway] (INDEX= 32) (Covered) returning @Nullable expression from method with @NonNull return type
        return null;
        ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/renderer/LegendRenderer.java:172: error: [NullAway] (INDEX= 69) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                            null,
                            ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/data/ChartData.java:359: error: [NullAway] (INDEX= 29) (Covered) returning @Nullable expression from method with @NonNull return type
            return null;
            ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/data/LineDataSet.java:231: error: [NullAway] (INDEX= 56) (Covered) assigning @Nullable expression to @NonNull field
        mDashPathEffect = null;
                        ^

	(see http://t.uber.com/nullaway )
